PDI_124: Add rollback logic same as in MDA document
